backend-adjustments for displaying tenants and roles; code clean up & front-end refactoring
