# server/AP.Common/Models/TenantRole.cs
@@ -3,6 +3,7 @@
 public record TenantRole
 {
     public int? TenantId { get; init; }
+    public string? TenantName { get; init; }
     public byte? RoleId { get; init; }
     public string? RoleName { get; init; }
     public string? RoleDisplayName { get; init; }
